Compucom CCQA Org 100919/src/objects/Mapping_Setting__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Cost_Center__c</fullName>
        <label>Cost Center</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCST_BSLA__c</fullName>
        <label>FCST BSLA</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCST_GeoCodes__c</fullName>
        <label>FCST GeoCodes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FCST_ProgramManager__c</fullName>
        <label>FCST_ProgramManager</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCST_Program_Executive__c</fullName>
        <label>FCST_Program Executive</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCST_TR_YR1_Amount__c</fullName>
        <label>FCST_TR_YR1_Amount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fcst_BusinessUnit__c</fullName>
        <label>Fcst_BusinessUnit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fcst_CPM__c</fullName>
        <label>Fcst_CPM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fcst_EndDate__c</fullName>
        <label>Fcst_EndDate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fcst_Product_Amount__c</fullName>
        <label>Fcst Product Amount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fcst_Q__c</fullName>
        <label>Fcst Q#</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fcst_Revenue_Type__c</fullName>
        <label>Fcst Revenue Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fcst_SalesRegion__c</fullName>
        <label>Fcst_SalesRegion</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fcst_StartDate__c</fullName>
        <label>Fcst_StartDate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fcst_SubRegion__c</fullName>
        <label>Fcst_SubRegion</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geo_Name__c</fullName>
        <label>Geo Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geo__c</fullName>
        <label>Geo#</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_RecordType_Api__c</fullName>
        <label>Opportunity RecordType Api</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_SVC_YR1__c</fullName>
        <label>Opportunity SVC YR1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_TCV__c</fullName>
        <label>Opportunity TCV</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Term_In_Months__c</fullName>
        <label>Term In Months</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transition_Date__c</fullName>
        <label>Transition Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Mapping Setting</label>
</CustomObject>